--- a/NovemberProjektet.csproj
+++ b/NovemberProjektet.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ancestor.cs" />
     <Compile Include="Costumer.cs" />
     <Compile Include="Monster.cs" />
+    <Compile Include="Offspring.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
