--- a/NovemberProjektet.csproj
+++ b/NovemberProjektet.csproj
@@ -43,12 +43,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ancestor.cs" />
-    <Compile Include="Costumer.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="MonsterManager.cs" />
     <Compile Include="Offspring.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
